Tidied dir structure, added link to code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="css/press-2-0.css" rel="stylesheet">
   <link href="css/flocking.css" rel="stylesheet">
-  <script type="text/javascript" src="flocking.js"></script>
+  <script type="text/javascript" src="js/flocking.js"></script>
   <title>Birds of a feather, flock together.</title>
 </head>
 
@@ -15,7 +15,8 @@
   <canvas id="canvas" style="border: 1px solid black;"></canvas>
 
   <div id='controls' style="text-align:center;">
-    <button class="press press-round press-amber press-sm" id="control-button" onclick='ctrlsOnOff()'>Show Controls</button>
+    <button class="press press-round press-amber press-sm" id="control-button" onclick='ctrlsOnOff()'>Show controls</button>
+    <button class="press press-round press-amber press-sm" onclick="location.href='http://github.com/jiminyhall/flocking';">See the code</button>
   </div>
 
   <div class="divTable" id="controlPanel">
