--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="divTableItem long">
-      <input type="checkbox" id="showBounds" name="showBounds" value="showBounds" checked="true" onclick="showBoundsClicked(this)">
+      <input type="checkbox" id="showBounds" name="showBounds" value="showBounds" onclick="showBoundsClicked(this)">
       <label for="showBounds">Bounds</label>
       <span id="boundsVal"></span>
     </div>
